# Cultivation

./: .editorconfig  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  README.md  README_ja-JP.md  README_zh-CN.md  README_zh-TW.md  THEMES.md  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: backend-checks.yml  build.yml  frontend-checks.yml
.husky/: pre-commit
.lefthook/commit-msg/: commitlint.sh
cfg/: postcss.config.ts  tailwind.config.ts
docs/: elementIds.md  troubleshooting.md
lang/: en.json
public/: index.html  manifest.json  theme-engine.js
src/: App.tsx  constants.ts  global.css  index.css  index.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/keys/: dispatchKey.txt  passwordKey.txt
src-tauri/lang/: chs.json  cht.json  de.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  lv.json  nl.json  pl.json  pt-br.json  ru.json  vi.json
src-tauri/mhycrypto/: aes.c  aes.cpp  aes.h  memecrypto.cpp  memecrypto.h  metadata.cpp  metadata.h  metadatastringdec.cpp  metadatastringdec.h
src-tauri/resources/: cert.crt  private-key.pem  wix.wxs
src-tauri/src/: admin.rs  config.rs  downloader.rs  error.rs  file_helpers.rs  gamebanana.rs  http.rs  lang.rs  main.rs  metadata.rs  metadata_patcher.rs  patch.rs  proxy.rs  release.rs  structs.rs  system_helpers.rs  unzip.rs  web.rs
src/app/: index.tsx
src/app/providers/: index.ts  with-configuration-manager.tsx  with-downloads-manager.tsx  with-i18n.tsx
src/backend/: types.ts
src/backend/stores/: mihoyo.ts  settings.ts
src/entities/configuration/: index.ts
src/entities/configuration/lib/: index.ts  types.ts
src/entities/configuration/model/: index.ts  provider.tsx
src/features/download/: index.ts
src/features/download/lib/: index.ts  types.ts
src/features/download/model/: index.ts  provider.tsx
src/features/download/ui/: download.tsx  index.ts
src/resources/example-theme/: index.json
src/shared/lib/: classcat-extension.ts  fp.ts  i18n.ts  jsx.ts  notification-manager.ts  tauri.test-d.ts  tauri.ts  utility-types.ts
src/shared/ui/atoms/: index.ts
src/shared/ui/atoms/big-button/: index.tsx  style.css.ts
src/shared/ui/atoms/checkbox/: index.tsx  style.css.ts
src/shared/ui/atoms/divider/: index.tsx  style.css.ts
src/shared/ui/atoms/download-section/: index.tsx  style.css.ts
src/shared/ui/atoms/help-button/: index.tsx  style.css.ts
src/shared/ui/atoms/progress-bar/: index.tsx  main-progress-bar.tsx  style.css.ts
src/shared/ui/atoms/text-input/: index.tsx  style.css.ts
src/shared/ui/layouts/: index.ts
src/shared/ui/layouts/menu/: index.tsx  style.css.ts
src/shared/ui/molecules/dir-input/: index.tsx  style.css.ts
src/shared/ui/molecules/download-list/: index.tsx  style.css.ts
src/ui/: App.css  App.test.tsx  App.tsx  Debug.tsx  Main.tsx  Mods.css  Mods.tsx  Test.tsx  custom.css
src/ui/components/: InfoBoard.tsx  MiniDialog.css  MiniDialog.tsx  NewsFeed.tsx  RightBar.css  RightBar.tsx  ServerLaunchSection.css  ServerLaunchSection.tsx  TopBar.css  TopBar.tsx
src/ui/components/common/: BigButton.css  BigButton.tsx  Checkbox.css  Checkbox.tsx  DirInput.css  DirInput.tsx  DownloadList.css  DownloadList.tsx  DownloadSection.css  DownloadSection.tsx  HelpButton.css  HelpButton.tsx  MainProgressBar.tsx  Notification.css  Notification.tsx  ProgressBar.css  ProgressBar.tsx  SmallButton.css  SmallButton.tsx  TextInput.css  TextInput.tsx  ThemeOptionValue.tsx
src/ui/components/menu/: Divider.css  Divider.tsx  Downloads.css  Downloads.tsx  ExtrasMenu.css  ExtrasMenu.tsx  Game.css  Game.tsx  GamePathNotify.css  GamePathNotify.tsx  Menu.css  Menu.tsx  Options.css  Options.tsx
src/ui/components/mods/: LoadingCircle.css  LoadingCircle.tsx  ModHeader.css  ModHeader.tsx  ModList.css  ModList.tsx  ModPages.css  ModPages.tsx  ModTile.css  ModTile.tsx
src/ui/components/news/: NewsSection.css  NewsSection.tsx
src/ui/css/: App.scss
src/ui/css/components/: TopBar.scss
src/ui/css/layout/: Launcher.scss
src/ui/layout/: Launcher.tsx
src/utils/: configuration.ts  dom.ts  download.ts  game.ts  gamebanana.ts  language.ts  language.tsx  metadata.ts  mods.ts  patcher.ts  resources.ts  rsa.ts  server.ts  setupTests.ts  string.ts  themes.ts  zipUtils.ts  zip_utils.ts
src/widgets/menu/downloads-menu/: index.ts
src/widgets/menu/downloads-menu/ui/: index.tsx  style.css.ts
